<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSMoviles</string>
    <string name="service_name">GPSService</string>
    <string name="startButton">START</string>
    <string name="stopButton">STOP</string>
    <string name="restartButton">RESTART</string>
    <string name="showButton">SHOW MAX VELOCITY</string>
    <string name="textView">0 \n Km/h</string>

</resources>